chore: layout overflow fix

--- a/sample-apps/react/react-dogfood/style/layout.scss
+++ b/sample-apps/react/react-dogfood/style/layout.scss
@@ -1,6 +1,6 @@
 .rd__layout {
   display: flex;
-  height: calc(100dvh - 120px);
+  height: calc(100dvh - 140px);
   gap: var(--str-video__spacing-md);
   padding: var(--str-video__spacing-md);
 }
@@ -9,6 +9,7 @@
   position: absolute;
   z-index: 2;
   left: 0;
+  bottom: 0;
   display: flex;
   width: 100%;
   height: calc(100dvh - 60px);
